--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ __pycache__/
 
 # excel file
 *.xlsx
+*.txt
+*.csv
+*.xml
 
 # image file
 *.tiff
@@ -47,8 +50,6 @@ htmlcov/
 .coverage
 .coverage.*
 .cache
-nosetests.xml
-coverage.xml
 *.cover
 .hypothesis/
 
